--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -11,26 +11,22 @@
             <table class="uk-table uk-table-justify uk-table-divider uk-table-large" data-spy="scroll" data-target="#spy">
                 <thead>
                     <tr class="uk-text-center">
-                        <th class="uk-text-center" style="width: 4%;">ID</th>
-                        <th class="uk-text-center">Название задачи</th>
-                        <th class="uk-text-center">Кол-во шт товара</th>
-                        <th class="uk-text-center">Заказчик</th>
-                        <th class="uk-text-center">Дедлайн</th>
-                        <th class="uk-text-center">Статус</th>
-                        <th class="uk-text-center">Отказаться/Завершить</th>
-                        <th class="uk-text-center">Посмотреть пожелания</th>
-                        <th class="uk-text-center">Сообщения</th>
+                        <th class="uk-text-center uk-width-auto">ID</th>
+                        <th class="uk-text-center uk-width-auto">Название задачи</th>
+                        <th class="uk-text-center uk-width-auto">Заказчик</th>
+                        <th class="uk-text-center uk-width-auto">Статус</th>
+                        <th class="uk-text-center uk-width-auto">Отказаться/Завершить</th>
+                        <th class="uk-text-center uk-width-auto">Посмотреть пожелания</th>
+                        <th class="uk-text-center uk-width-auto">Сообщения</th>
                     </tr>
                 </thead>
                 <!-- товары в работе -->
                 <tbody>
                     {% for product in products %}
                     <tr>
-                        <td class="uk-text-center uk-text-truncate product_id" uk-tooltip="{{ product.id }}">{{ product.id }}</td>
-                        <td class="uk-text-center">{{ product.product_name }}</td>
-                        <td class="uk-text-center">1</td>
+                        <td class="uk-text-center product_id" uk-tooltip="{{ product.id }}">{{ product.id }}</td>
+                        <td class="uk-text-center uk-text-truncate">{{ product.product_name }}</td>
                         <td class="uk-text-center">{{ product.customer }}</td>
-                        <td class="uk-text-center">2021-05-23</td>
                         <th class="uk-text-left">
                             <button name="in_work" class="uk-badge" type="submit" style="border-color: {{product.status1}}; background-color: {{product.status1}}; padding: 10%; margin: 2px;" uk-tooltip="В работе" value="{{product.id}}">1</button>
                             <button name="done"    class="uk-badge" type="submit" style="border-color: {{product.status2}}; background-color: {{product.status2}}; padding: 10%; margin: 2px;" uk-tooltip="Сделано" value="{{product.id}}">2</button>
