--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -118,7 +118,7 @@
         </form>
     </div>
 
-    <div class="uk-flex uk-flex-left uk-flex-middle uk-width-4-5" uk-grid style="margin: auto;" >
+    <div class="uk-grid uk-grid-medium uk-width-4-5" uk-grid style="height: 100%; margin: auto;" >
 
             {% include "baseProductCard.html" %}
 
