made shop filtrs

--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -1,4 +1,4 @@
-<div class="uk-flex uk-flex-top uk-flex-center" style="margin: 5% auto;">
+<div class="uk-flex uk-flex-top uk-flex-center" style="margin: 0 auto;">
     <div class="uk-width-3-5" style="margin: 0 auto">
         <form id="regForm" method="POST" action="">
             <h1 class="mb-5">Создать товар</h1>
@@ -45,6 +45,12 @@
                                     uk-tooltip="Опишите свой товар. Так покупателям будет легче понять, что они точно хотят его купить"
                                     uk-icon="question"></i></label>
                             {{ form8.country }}
+                        </div>
+                        <div class="uk-width-1 uk-margin-small-bottom">
+                            <label> Пол <i
+                                    uk-tooltip="Опишите свой товар. Так покупателям будет легче понять, что они точно хотят его купить"
+                                    uk-icon="question"></i></label>
+                            {{ form8.sex }}
                         </div>
                     </div>
                     <div class="uk-width-2-5 uk-margin-small-bottom">
