made script for saving imgs in web

--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -44,7 +44,7 @@
             <div class="uk-width-2-5 uk-flex uk-flex-row">
                 <div class="uk-width-4-5 uk-flex uk-flex-row">
                     <div class="uk-flex uk-flex-column uk-width-1" uk-width-auto">
-                        <div data-src="../../media/{{shop.logoImage}}"
+                        <div data-src="{{shop.logoImage}}"
                             class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover" uk-img>
 
                         </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="uk-width-3-5 uk-flex uk-flex-row">
                 <div class="uk-flex uk-flex-column uk-width-1" uk-width-auto>
-                    <div data-src="../../media/{{shop.bgImage}}"
+                    <div data-src="{{shop.bgImage}}"
                         class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover" uk-img>
                     </div>
                     <br>
